minor color tweaks

--- a/css/style.css
+++ b/css/style.css
@@ -577,7 +577,7 @@ input[type="text"].inputError {
   margin-bottom: 30px;
   padding-top: 15px;
   padding-bottom: 15px;
-  border: 1px solid #1e2f51; }
+  border: 1px solid #96a2ec; }
 
 .radioGroup {
   padding-right: 15px;
