--- a/scss/style.scss
+++ b/scss/style.scss
@@ -710,7 +710,7 @@ input[type="text"].inputError {
 	margin-bottom: 30px;
 	padding-top: 15px;
 	padding-bottom: 15px;
-	border: 1px solid $color-masthead;
+	border: 1px solid $highlight-border;
 }
 
 .radioGroup {
