--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,29 @@ input[type="text"] {
     border: 1px solid #623353;
     color: #74546a; }
 
+input[type="password"] {
+  width: 100%;
+  line-height: 2em;
+  border: 0px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+  color: #eadef2;
+  background-color: transparent;
+  border-bottom: 1px solid #9d138c;
+  width: 100%;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto; }
+  input[type="password"]::placeholder {
+    color: #623353; }
+  input[type="password"]:focus {
+    border-bottom: 1px solid #623353; }
+    input[type="password"]:focus::placeholder {
+      color: #dead80; }
+  input[type="password"]:disabled {
+    border: 1px solid #623353;
+    color: #74546a; }
+
 .taskLabel {
   font: "Roboto Condensed", sans-serif;
   font-size: .8em; }
@@ -305,6 +328,9 @@ input[type="text"] {
   background-image: -webkit-linear-gradient(#5b7bd5, #4864b1);
   background-image: -o-linear-gradient(#5b7bd5, #4864b1);
   background-image: linear-gradient(#5b7bd5, #4864b1); }
+
+.signInSignUp a {
+  color: #dead80; }
 
 input[type="text"].inputError {
   background-color: #f04e7d; }
