--- a/scss/style.scss
+++ b/scss/style.scss
@@ -219,6 +219,25 @@ input[type="text"] {
 	@include center;
 }
 
+input[type="password"] {
+	width: 100%;
+	line-height: 2em;
+	border: 0px;
+	@include inputs {
+		border-bottom: 1px solid $color-borders;
+		&::placeholder {
+			color: $color-accent;
+		}
+		&:focus {
+			&::placeholder {
+				color: $highlight-text;
+			}
+			border-bottom: 1px solid $color-accent;
+		}  
+	}
+	@include center;
+}
+
 .taskLabel {
 	@include label;
 }
@@ -400,10 +419,14 @@ input[type="text"] {
 }
 
 .facebookSignIn:hover {
-  background-color: #5b7bd5;
+ background-color: #5b7bd5;
  background-image: -webkit-linear-gradient(#5b7bd5, #4864b1);
  background-image: -o-linear-gradient(#5b7bd5, #4864b1);
  background-image: linear-gradient(#5b7bd5, #4864b1);
+}
+
+.signInSignUp a{
+	color: $highlight-text;
 }
 
 // ERRORS ------------------------------ /
