--- a/css/style.css
+++ b/css/style.css
@@ -332,6 +332,26 @@ input[type="password"] {
 .signInSignUp a {
   color: #dead80; }
 
+.signin-transition {
+  opacity: 0;
+  -webkit-animation: signinAnimation 0.25s;
+  animation: signinAnimation 0.4s; }
+
+@-webkit-keyframes signinAnimation {
+  from {
+    opacity: 1; }
+  to {
+    opacity: 0; } }
+.signup-transition {
+  opacity: 0;
+  -webkit-animation: signUpAnimation 0.25s;
+  animation: signUpAnimation 0.4s; }
+
+@-webkit-keyframes signUpAnimation {
+  from {
+    opacity: 1; }
+  to {
+    opacity: 0; } }
 input[type="text"].inputError {
   background-color: #f04e7d; }
 
