--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,12 @@ input[type="password"] {
     height: 35px;
     border-radius: 50%; }
 
+.menuIcon div {
+  width: 35px;
+  height: 5px;
+  background-color: black;
+  margin: 6px 0; }
+
 .userMenu {
   position: absolute;
   width: 100%;
