--- a/scss/style.scss
+++ b/scss/style.scss
@@ -293,6 +293,15 @@ input[type="password"] {
 	}
 }
 
+.menuIcon div {
+	width: 35px;
+	height: 5px;
+	background-color: black;
+	margin: 6px 0;
+}
+
+
+
 // User Menu ----------------------- /
 
 .userMenu {
