--- a/css/style.css
+++ b/css/style.css
@@ -113,8 +113,12 @@ input[type="submit"] {
 
 input[type="text"] {
   width: 100%;
-  line-height: 2em;
+  height: 35px;
+  line-height: 35px;
   border: 0px;
+  padding-left: 1px;
+  padding-right: 1px;
+  padding-top: 1px;
   margin-right: 5px;
   margin-bottom: 5px;
   color: #eadef2;
