--- a/scss/style.scss
+++ b/scss/style.scss
@@ -202,8 +202,12 @@ input[type="submit"] {
 
 input[type="text"] {
 	width: 100%;
-	line-height: 2em;
+	height: 35px;
+	line-height: 35px;
 	border: 0px;
+	padding-left: 1px;
+	padding-right: 1px;
+	padding-top: 1px;
 	@include inputs {
 		border-bottom: 1px solid $color-borders;
 		&::placeholder {
